# deprecated-params

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Appache-2.0-LICENSE.md  NEWS.rst  README.md  pyproject.toml  towncrier.toml
.github/workflows/: CI.yml  dependabot-auto-merge.yaml  python-publish.yml
CHANGES/: .gitignore  2.feature.1.rst  2.feature.2.rst  2.feature.3.rst  2.feature.4.rst
deprecated_params/: __init__.py  _helpers_c.pyi  _helpers_c.pyx  _helpers_py.py
docs/: conf.py  index.rst
requirements/: dev.txt  docs.txt
src/deprecated_params/: __init__.py
tests/: test_wrapper.py
