
[project]
name = "deprecated-params"
dynamic = ["version"]
description = "A Wrapper for functions, class objects and methods for deprecating keyword parameters"
readme = "README.md"
authors = [
    { name = "Vizonex", email="VizonexBusiness@gmail.com"},
]
license = "MIT"
requires-python = ">=3.10"
[tool.setuptools.dynamic]
version = {attr = "deprecated_params.__version__"}

[build-system]
requires = [
    "setuptools >= 47"
]
build-backend = "setuptools.build_meta"


# I added some shortcuts incase needed.
[project.optional-dependencies]
pytest=[
    "pytest>=9.0.2"
]
docs=[
    "sphinx==9.1.0",
    "aiohttp-theme==0.1.7"
]

[project.urls]
    homepage = "https://github.com/Vizonex/deprecated-params"
    repository = "https://github.com/Vizonex/deprecated-params.git"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "F"
]
ignore = [
    "F405" # may be undefined, or defined from star imports (I Need these)
]